# opticut

./: .gitignore  go.mod  prod.db  results.json  setup_db.sql  start_backend.bat  tauri.conf.json
.circleci/: config.yml
.github/workflows/: main.yml  release.yml
backend/: console.sql  go.mod  prod.db  settings.json
backend/globals/: Settings.JSON  globals.go
backend/internal/: og_db_setup.sql
backend/main/: go.mod  main.go  prod.db
backend/ops/: ops.go
backend/optimizer/: optimizer_utils.go
backend/part_utils/: part_db_utils.go  sorting_utils.go
backend/results/: TEST.json
cutwise/: package.json  pnpm-lock.yaml  vite.config.ts
cutwise/src/: App.css  App.tsx  SettingsContext.tsx  globals.css  globals.ts  main.tsx
cutwise/src-tauri/: .taurignore  Cargo.toml  build.bat  build.sh  start_backend.bat  tauri.conf.json
cutwise/src-tauri/resources/main/: prod.db
cutwise/src-tauri/resources/main/globals/: settings.json
cutwise/src-tauri/src/: file_upload.rs  main.rs  start_backend.bat  start_backend.sh  stop_backend.bat
db/: db_utils.go
frontend/cutwise/: package.json  pnpm-lock.yaml
globals/: globals.go
internal/db/: db_utils.go  setup_db.sql
internal/server/: server.go
logger/: logger.go
main/: coverage  go.mod  go.sum  main.go  prod.db
main/files/: Book1.xlsx  generated_file_1.xlsx  generated_file_10.xlsx  generated_file_2.xlsx  generated_file_3.xlsx  (+6 more)
main/ops/: ops.go
material_utils/: sorting_utils.go
oldscripts/: start_backend.bat  start_backend.sh  workflow.yml
optimizer/: optimizer_utils.go
part_utils/: part_db_utils.go
(+117 files in other folders)
