[package]
name = "CutWise"
version = "0.1.0"
description = "CutWise"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "os-all", "path-all", "fs-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"

[features]
custom-protocol = ["tauri/custom-protocol"]
