[package]
name = "MaterialWise"
version = "0.0.34"
description = "MaterialWise"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "updater", "api-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"

[features]
custom-protocol = ["tauri/custom-protocol"]
